# DaisukiTTS-engine

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  _typos.toml  engine_manifest.json  presets.yaml  pyproject.toml  requirements-dev.txt  requirements-license.txt  requirements-test.txt  requirements.txt  run.py  run.spec
.github/ISSUE_TEMPLATE/: bugreport.md  featurerequest.md  question.md
.github/actions/prepare_python/: action.yml
.github/workflows/: build-docker.yml  build-docs.yml  build-engine-container.yml  build-engine-package.yml  build-latest-dev.yml  build.yml  coverage-comment.yml  labeler.yml  release-test-docker.yml  release-test.yml  sentry.yml  test-engine-container.yml  test-engine-package.yml  test-issue-freshness.yml  test-security.yml  test.yml
api/: index.html
build_util/: check_release_build.py  create_venv_and_generate_licenses.bash  generate_licenses.py  make_docs.py  modify_pyinstaller.bash
dictionaries/: 01_default.csv
engine_manifest_assets/: dependency_licenses.json
resources/dictionaries/: 01_default.csv  01_default.csv.zst  01_default.dic  01_edict2.csv.zst  01_medic.csv.zst  01_medic_orca.csv  01_medic_orca.dic  01_msmed12.csv  01_msmed12.csv.zst  01_msmed12.dic  01_mzime-name.csv  01_mzime-name.csv.zst  01_mzime-name.dic  02_medic_orca.dic  02_msmed12.dic  02_mzime-name.dic  02_personal-name.csv  02_personal-name.csv.zst  02_personal-name.dic  03_jawiki-kana-kanji-01.csv.zst  03_jawiki-kana-kanji-02.csv.zst  03_jawiki-kana-kanji-03.csv.zst  03_nico-pixiv.csv  04_neologd-01.csv.zst  04_neologd-02.csv.zst  04_neologd-03.csv.zst
resources/engine_manifest_assets/: dependency_licenses.json
resources/ui_template/: ui.html
test/: aivm_manifest.json  test_library_manager.py  utility.py  vvlib_manifest.json
test/benchmark/: engine_preparation.py
test/e2e/: conftest.py  test_characters.py  test_sing.py  test_speakers.py  test_tts.py
test/e2e/__snapshots__/: test_tts.ambr
test/e2e/__snapshots__/test_openapi/: test_OpenAPIの形が変わっていないことを確認.json
test/e2e/single_api/: test_frame_synthesis.py  test_morphable_targets.py  test_sing_frame_audio_query.py  test_singer_info.py  test_singers.py  test_speaker_info.py  test_synthesis_morphing.py
test/e2e/single_api/__snapshots__/: test_setting_api.ambr
test/e2e/single_api/engine_info/: test_engine_manifest.py  test_supported_devices.py
test/e2e/single_api/morphing/: test_morphable_targets.py  (+1 more)
test/setting/: test_setting.py
test/tts_pipeline/: test_text_analyzer.py  test_wave_synthesizer.py
test/unit/tts_pipeline/: test_text_analyzer.py  test_wave_synthesizer.py
test/unit/user_dict/: test_user_dict.py  test_user_dict_model.py  test_word_types.py
test/user_dict/: test_user_dict_model.py
tools/: build_dictionary.py  check_release_build.py  compress_dictionaries.py  create_venv_and_generate_licenses.bash  generate_licenses.py  make_docs.py  modify_pyinstaller.bash  remove_dictionary_duplicates.py  remove_dictionary_duplicates_by_priority.py  remove_redundant_dictionary_entries.py
ui_template/: ui.html
voicevox_engine/: __init__.py  aivm_infos_repository.py  aivm_manager.py  engine_manifest.py  library_manager.py  logging.py  model.py
voicevox_engine/app/: application.py  dependencies.py  middlewares.py  openapi_schema.py
voicevox_engine/app/routers/: aivm_models.py  character.py  engine_info.py  morphing.py  preset.py  speaker.py  tts_pipeline.py  user_dict.py  voice_models.py
voicevox_engine/core/: core_initializer.py
voicevox_engine/dev/core/: mock.py
voicevox_engine/dev/tts_engine/: mock.py
voicevox_engine/engine_manifest/: EngineManifest.py  EngineManifestLoader.py
voicevox_engine/metas/: Metas.py
voicevox_engine/preset/: Preset.py  PresetManager.py  model.py  preset_manager.py
voicevox_engine/setting/: Setting.py  model.py
voicevox_engine/tts_pipeline/: model.py  mora_mapping.py  style_bert_vits2_tts_engine.py  text_analyzer.py  tts_engine.py
voicevox_engine/user_dict/: constants.py  model.py  user_dict.py  user_dict_manager.py  user_dict_word.py
voicevox_engine/user_dict/dictionary/: download.py  update.py
voicevox_engine/utility/: path_utility.py  user_agent_utility.py
(+43 files in other folders)
